tests/ui/implied-bounds/references-err.stderr
error[E0412]: cannot find type `DoesNotExist` in this scope
  --> $DIR/references-err.rs:14:18
   |
LL |     type Assoc = DoesNotExist;
   |                  ^^^^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
